src/main/java/com/example/weather_application/errors/UserAlreadyExistException.java
package com.example.weather_application.errors;

public class UserAlreadyExistException extends RuntimeException {
    public UserAlreadyExistException(String message) {
        super(message);
    }
}
